--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "not7generator",
+  "name": "notNumRoller",
   "version": "6.8.9",
   "description": "A function to generate a random number between 0 and 10 that isn't 7",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/griffitp12/not7generator.git"
+    "url": "git+https://github.com/griffitp12/notNumRoller.git"
   },
   "keywords": [
     "helpful",
@@ -18,9 +18,9 @@
   "author": "Pete",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/griffitp12/not7generator/issues"
+    "url": "https://github.com/griffitp12/notNumRoller/issues"
   },
-  "homepage": "https://github.com/griffitp12/not7generator#readme",
+  "homepage": "https://github.com/griffitp12/notNumRoller#readme",
   "dependencies": {
     "chai": "^4.3.4",
     "mocha": "^8.4.0"
