--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notNumRoller",
-  "version": "6.8.9",
+  "version": "0.0.0",
   "description": "A function to generate a random number between 0 and 10 that isn't 7",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/griffitp12/notNumRoller#readme",
   "dependencies": {
     "chai": "^4.3.4",
-    "mocha": "^8.4.0"
+    "mocha": "^8.4.0",
+    "np": "^7.5.0"
   }
 }
